# emf.py.codegen

./: .gitignore  PLAN.md  README.md  pyproject.toml
examples/model/: library.ecore
src/emf_codegen/: __init__.py
src/emf_codegen/cli/: __init__.py
src/emf_codegen/genconfig/: __init__.py  gen_config.py  gen_config_converter.py  gen_config_loader.py
src/emf_codegen/generator/: __init__.py  code_generator.py  generated_file.py  generator_context.py  generator_options.py  import_resolver.py  type_mapper.py
src/emf_codegen/generator/modes/: __init__.py  base_generator.py  decorator_generator.py  emf_generator.py  plain_generator.py
src/emf_codegen/genmodel/: __init__.py  gen_class.py  gen_datatype.py  gen_enum.py  gen_feature.py  gen_model.py  gen_operation.py  gen_package.py  generation_mode.py
src/emf_codegen/loader/: __init__.py  ecore_loader.py
src/emf_codegen/templates/decorator/: class.py.jinja  enum.py.jinja  package.py.jinja
src/emf_codegen/templates/plain/: class.py.jinja
src/emf_codegen/util/: __init__.py  eobject_helper.py  string_utils.py
tests/: conftest.py  test_cli.py  test_decorator_generator.py  test_emf_generator.py  test_example_generation.py  test_genconfig.py  test_genmodel.py  test_loader.py  test_plain_generator.py  test_scaffolding.py
